syntax = "proto3";

option go_package = "grpc/hextech";

package hextech;

service ConsistenciaService {
  rpc GetLogs(GetLogsRequest) returns (GetLogsResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
}

message GetLogsRequest {
}

message GetLogsResponse {
  int32 serverID = 1;
  repeated RegionLogs regionLogs = 2;
}

message UpdateRequest {
  int32 serverID = 1;
  map<string, VectorClock> vectorClocks = 2;
}

message UpdateResponse {
}

message RegionLogs {
  string region = 1;
  map<string, string> logs = 2;
  VectorClock vector = 3;
}

message VectorClock {
  int32 server1 = 1;
  int32 server2 = 2;
  int32 server3 = 3;
}